# learn_python

./: pyproject.toml  requirements.txt
src/: main.py
src/api_client/: api_client.py
src/learn_python/api_client/: api_client.py
src/learn_python/models/: models.py
src/learn_python/writers/: csv.py
src/models/: models.py
tests/: test_api_client.py  test_csv_writer.py
