[project]
name = "learn-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pydantic",
]

[project.optional-dependencies]
# 開発やテストの時だけ必要なライブラリ
test = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools]
package-dir = {"" = "src"}